@@ -10,6 +10,9 @@ Recipe:
  - Run "make" to get a list of available targets.
  - Build an image using one of the build_ targets (build_netboot,
    build_all, etc).
+ - Look in dest/, and boot your new floppy, netboot image, hd-media
+   image,  or mini iso. (Mini isos are created by make build_netboot,
+   only on i386 for now.)
  
 A more detailed overview of how the installer is built:
 
@@ -46,4 +49,4 @@ A more detailed overview of how the installer is built:
   udebs that were installed.
 * Some boot images have associated "driver" disks. These disks just get
   udebs put on them.
-* "make demo" (run as root) will chroot into the system.
+* The final images are put in the dest/ directory.
