@@ -57,12 +57,14 @@ KERNEL = $(foreach name,$(KERNELNAME),$(SOME_DEST)/$(EXTRANAME)$(name))
 BOOT = $(SOME_DEST)/$(EXTRANAME)boot.img$(GZIPPED)
 ROOT = $(SOME_DEST)/$(EXTRANAME)root.img$(GZIPPED)
 EXTRA = $(SOME_DEST)/$(EXTRANAME).img$(GZIPPED)
+MINIISO = $(SOME_DEST)/$(EXTRANAME)mini.iso
 
 # some intersting files in tmp/ we may need
 TEMP_INITRD = $(TEMP)/initrd.gz
 TEMP_KERNEL = $(foreach name,$(KERNELNAME),$(TEMP)/$(name))
 TEMP_BOOT = $(TEMP)/boot.img
 TEMP_ROOT = $(TEMP)/root.img
+TEMP_MINIISO = $(TEMP)/mini.iso
 TEMP_EXTRA = $(TEMP)/$(EXTRANAME).img
 
 # Used for building cd images, for eg, powerpc.
