@@ -70,9 +70,9 @@ arch_root:
 	mcopy -i$(TEMP_ROOT) $(TEMP)/disk.lbl ::disk.lbl
 	$(if $(GZIPPED),gzip -v9f $(TEMP_ROOT))
 
-# CD image creation
-#
-cd_image: build_cdrom
-	cp boot/i386/syslinux.cfg $(BASE_DEST)/syslinux.cfg
-	mkisofs -r -J -b `basename $(BASE_TMP)/cdrom/boot.img` -o cdrom.iso $(BASE_DEST)
-	mv $(TYPE).iso $(DEST)
+# Miniture CD image with only boot image on it.
+.PHONY: arch_miniiso
+arch_miniiso:
+	mkdir -p $(TEMP)/iso
+	ln -f $(TEMP_BOOT) $(TEMP)/iso/boot.img
+	mkisofs -r -J -b `basename $(TEMP_BOOT)` -o $(TEMP_MINIISO) $(TEMP)/iso
